attempt to fix ios/safari flicker

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,8 @@ header .left-aligned i {
   -webkit-transform-style: preserve-3d;
   -webkit-backface-visibility: hidden;
   -webkit-transform: translate3d(0, 0, 0);
+  -webkit-perspective: 1000;
+  -webkit-font-smoothing: subpixel-antialiased;
   font-size: 3vmin;
   font-weight: 300;
   letter-spacing: 0.3vmin;
